{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "InGame",
            "id": "805f4ebf-5b84-4426-b383-667f4346debd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7e0f8b62-bdd9-447e-a2e3-aa5ef8a2b722",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3f54266a-c412-4b49-bcde-caf575aea578",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstAttack",
                    "type": "Button",
                    "id": "b1e4dc20-dc1e-4a41-ac0c-a7e6fa2b8427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Charging",
                    "type": "Button",
                    "id": "52f1e5f7-de23-484d-8aa0-7f6ea420c32c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondAttack",
                    "type": "Button",
                    "id": "4a32fb9e-d352-4750-801c-558f901eecc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "6f48e6c8-606d-4837-bdff-1481c6614681",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThirdAttack",
                    "type": "Button",
                    "id": "0f02eac3-f9df-4c4e-88ed-dbdc5ef6c006",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba2181f9-ae1a-4347-a038-4037d67bd28c",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "2df58cef-320a-42ca-a69e-1e1d8aeb0aad",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f348e574-76d4-4566-aeec-ac0e339e9449",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "84a4b567-e51e-4694-bc50-1eba5eb9bd72",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "eca150fb-2366-4b30-9576-ad9a18146d38",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "89ea404a-d730-4c5b-a55e-6d2b7088acdc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "952c09de-70c3-474d-9f3e-2ad2b001f5b1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "385cfb59-dcd9-496c-a67d-98f2b1300df1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1edeed26-fc30-410d-a88c-0f81b9f8cbd0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63d7d5f6-1bd0-4717-ac56-2021e18b109b",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92b1488e-12c0-4330-83da-66c9be609d23",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bda781d-30cb-431b-a4b5-4718c32d8282",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SecondAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5907cd68-be70-4a3e-a279-97e4c7879d6c",
                    "path": "<Keyboard>/k",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SecondAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c24867ad-7d6c-4c23-b172-1004743e3bc3",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Charging",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5955696-23b2-44eb-8239-b2b579470a3a",
                    "path": "<Keyboard>/k",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Charging",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0772dfe7-889c-4fcd-ad6b-4b1a1046fc11",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b33f09bc-31bc-47ad-ad84-df4add6b3871",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a31ca988-d794-4f7e-b00f-e536e8f9bca8",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}